k8s/02_nginx-flask-mysql/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/backnet: "true"
        io.kompose.network/frontnet: "true"
        io.kompose.service: backend
    spec:
      containers:
      - image: backend
        imagePullPolicy: ""
        name: backend
        ports:
        - containerPort: 5000
        resources: {}
        volumeMounts:
        - mountPath: /run/secrets/db-password
          name: db-password
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: db-password
        secret:
          items:
          - key: db-password
            path: db-password
          secretName: db-password
status: {}
