k8s/02_nginx-flask-mysql/frontnet-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: frontnet
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/frontnet: "true"
  podSelector:
    matchLabels:
      io.kompose.network/frontnet: "true"
